--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -9,12 +9,18 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  {% load static %}
 
-  <title>Hello, world!</title>
+  <link rel="stylesheet" type="text/css" href="{% static '/cover.css' %}">
+
+  <title>Emanshu</title>
 </head>
 
 <body>
   <h1>Emanshu</h1>
+
+
+  <img src="{% static 'lang-logo.png' %}" class="img-fluid" alt="...">
 
   <!-- Optional JavaScript; choose one of the two! -->
 
@@ -28,9 +34,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
-
-  <!-- {% block content %}{% endblock %} -->
-
 </body>
 
 </html>
