--- a/hello/static/cover.css
+++ b/hello/static/cover.css
@@ -1,4 +1,15 @@
 /* <link rel="stylesheet" type="text/css" href="{% static 'cover.css' %}"> */
-.h1 {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+
+
+
+
+body {
+
+  background: url(../static/img/kirby.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  
+
+ }
