--- a/hello/static/cover.css
+++ b/hello/static/cover.css
@@ -5,7 +5,7 @@
 
 body {
 
-  background: url(../static/img/kirby.jpg) no-repeat center center fixed; 
+  background: url(/static/kirby.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
