--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -31,7 +31,7 @@
       <a class="nav-link" href="#">Link</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Poop</a>
     </li>
   </ul>
 
